--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^3.2.3",
-    "mysql2": "3.12.0"
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
