--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^3.2.3",
-    "mysql2": "^3.12.0"
+    "@iobroker/dev-server": "^0.7.8",
+    "mysql2": "^3.12.0",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
@@ -32,18 +34,18 @@
     "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^5.0.0",
     "@tsconfig/node22": "^22.0.0",
-    "@types/chai-as-promised": "^7.1.8",
     "@types/chai": "^4.3.20",
+    "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.5",
     "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.12",
-    "chai-as-promised": "^7.1.2",
     "chai": "^4.5.0",
+    "chai-as-promised": "^7.1.2",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint": "^8.57.1",
     "mocha": "^11.0.1",
     "prettier": "^3.4.2",
     "proxyquire": "^2.1.3",
