user input of files in a standard dialog, Edit function for maintenance, hourMeterOffset, Admin mode - not tested

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -87,6 +87,15 @@
 							"filter": false,
 							"sort": true,
 							"default": "0"
+						},
+						{
+							"type": "checkbox",
+							"width": "5%",
+							"title": "Admin",
+							"attr": "admin",
+							"filter": false,
+							"sort": true,
+							"default": false
 						}
 					]
 				}
