--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^3.2.3",
-    "@iobroker/dev-server": "^0.7.8",
-    "mysql2": "^3.12.0",
-    "node-schedule": "^2.1.1"
+    "mysql2": "^3.14.2",
+    "node-schedule": "^2.1.1",
+    "npm-check": "^3.2.10"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
@@ -32,6 +32,7 @@
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
     "@iobroker/adapter-dev": "^1.3.0",
+    "@iobroker/dev-server": "^0.7.8",
     "@iobroker/testing": "^5.0.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/chai": "^4.3.20",
@@ -71,7 +72,8 @@
     "check": "tsc --noEmit -p tsconfig.check.json",
     "lint": "eslint .",
     "translate": "translate-adapter",
-    "release": "release-script"
+    "release": "release-script",
+    "dev-server": "dev-server"
   },
   "bugs": {
     "url": "https://github.com/TheThom/ioBroker.sql-telegram-farm/issues"
