--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
 		"useUnknownInCatchVariables": false
 	},
 	"include": ["**/*.js", "**/*.d.ts"],
-	"exclude": ["node_modules/**", "widgets/**"]
+	"exclude": ["alt_node_modules/**", "widgets/**"]
 }
